--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <string name="fragment2">fragment2</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">Home</string>
+    <string name="catogory">Catogory</string>
+    <string name="paw">Paw</string>
+    <string name="medical">Medical</string>
+    <string name="profile">Profile</string>
+    <string name="catagory">catagory</string>
+    <string name="checkup">checkup</string>
 </resources>
