added pop items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,30 @@
     <string name="profile">Profile</string>
     <string name="catagory">catagory</string>
     <string name="checkup">checkup</string>
+    <string name="popular_categories">Popular Categories</string>
+    <string name="dog_food">Dog Food</string>
+    <string name="dog_food1">Dog Food</string>
+    <string name="cat_food">Cat Food</string>
+    <string name="cat_food1">Cat Food</string>
+    <string name="pharmacy">Pharmacy</string>
+    <string name="pharmacy1">Pharmacy</string>
+    <string name="litters_and_supplies">Litters and Supplies</string>
+    <string name="litters_and_supplies1">Litters and Supplies</string>
+    <string name="grooming">Grooming</string>
+    <string name="grooming1">Grooming</string>
+    <string name="toys">Toys</string>
+    <string name="toys1">Toys</string>
+    <string name="popular_items">Popular Items</string>
+    <string name="item_1">Item 1</string>
+    <string name="dog_food2">Dog food</string>
+    <string name="item_2">Item 2</string>
+    <string name="litter_box">Litter Box</string>
+    <string name="item_3">Item 3</string>
+    <string name="cat_food2">Cat Food</string>
+    <string name="item_4">Item 4</string>
+    <string name="pet_sofa">Pet Sofa</string>
+    <string name="item_5">Item 5</string>
+    <string name="pet_leash">Pet Leash</string>
+    <string name="item_6">Item 6</string>
+    <string name="dog_bone">Dog Bone</string>
 </resources>
