--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,5 @@
     <string name="product_image">product_image</string>
     <string name="item_image">Product Image</string>
     <string name="review_count">%1$d reviews</string>
-    <string name="sophia_granger">Sophia Granger</string>
+    <string name="Mike">Sophia Granger</string>
 </resources>
