--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,9 @@
     <string name="item_image">Product Image</string>
     <string name="review_count">%1$d reviews</string>
     <string name="sophia_granger">Sophia Granger</string>
+    <string name="add_to_cart">Add to Cart</string>
+    <string name="name">Name:</string>
+    <string name="quantity">quantity:</string>
+    <string name="price">price:</string>
+    <string name="view_cart">view cart</string>
 </resources>
