--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,17 @@
     <string name="price">price:</string>
     <string name="view_cart">view cart</string>
     <string name="Mike">Sophia Granger</string>
+
+        <!-- Other strings -->
+    <string-array name="time_slots_array">
+            <item>10:00 AM - 11:00 AM</item>
+            <item>11:00 AM - 12:00 PM</item>
+            <item>12:00 PM - 01:00 PM</item>
+            <item>01:00 PM - 02:00 PM</item>
+            <item>02:00 PM - 03:00 PM</item>
+            <item>03:00 PM - 04:00 PM</item>
+            <item>04:00 PM - 05:00 PM</item>
+    </string-array>
+
+
 </resources>
