--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="price">price:</string>
     <string name="view_cart">view cart</string>
     <string name="Mike">Sophia Granger</string>
+    <string name="cart">Cart</string>
 </resources>
